chg: avoid using deprecated APIs from depencencies